--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,8 @@ layout: default
   {%- endif -%}
 
   {{ content }}
-
   {%- if site.posts.size > 0 -%}
-    <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2> -->
+    <h2 class="post-list-heading">{{ page.list_title | default: "Essays" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
@@ -28,7 +27,7 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    <!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p> -->
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
 
 </div>
