--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -48,5 +48,5 @@ $on-laptop:        800px !default;
   "minima/base",
   "minima/layout",
   "minima/syntax-highlighting",
-  "minima/aside"
+  "minima/custom"
 ;
