--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,7 @@
             {% endunless %}
             {%- endif -%}
           {%- endfor -%}
+          <a class="page-link" href="https://nihalsahu.substack.com">Blog</a>
         </div>
       </nav>
     {%- endif -%}
