--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,8 @@
             {% endunless %}
             {%- endif -%}
           {%- endfor -%}
-          <a class="page-link" href="https://nihalsahu.substack.com">Blog</a>
+          <a class="page-link" href="https://nihalsahu.substack.com">Newsletter</a>
+          <a class="page-link" href="https://blog.nihalsahu.net">Blog</a>
         </div>
       </nav>
     {%- endif -%}
