--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,29 +1,7 @@
-<!-- Feel free to remove this div. Uses purplecoat: http://ellekasai.github.io/purplecoat.js -->
-<div data-purplecoat="shiori" data-purplecoat-label="sidebar.html">
-  <h3 class="section-header">
-    Get Shiori
-  </h3>
+  <h3 class="section-header">WHO AM I?</h3>
+  <p>My name is Nihal Sahu (better known as @annihalated on the Internets.)</p>  
+  <p>Twitter: <a href="https://twitter.com/annihalated">@annihalated</a></p>
 
-  <p><a href="https://github.com/ellekasai/shiori" target="_blank" class="btn btn-primary"><i class="fa fa-github fa-lg"></i> View on GitHub &rarr;</a></p>
+  <h3 class="section-header">Court Notes</h3>
+  <p>I also write a <a href="https://nihalsahu.substack.com">weekly newsletter</a> on legal issues and life.</p>
 
-  <h3>
-    Author
-  </h3>
-
-  <p>
-    <div class="media">
-      <h4 class="media-heading">Elle Kasai</h4>
-      <div class="media-body">
-        <img src="https://avatars0.githubusercontent.com/u/2410692?v=2&s=100" alt="Elle Kasai">
-      </div>
-    </div>
-  </p>
-</div>
-
-<h3>
-  Shiori is Customizable!
-</h3>
-
-<p><button data-purplecoat-toggle="shiori" class="btn btn-default"><i class="fa fa-toggle-on"></i> Toggle Customizable Sections</button></p>
-
-<p>&uarr; Powered by <a href="http://ellekasai.github.io/purplecoat.js" target="_blank">Purplecoat</a>.</p>
