--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,113 +1,6 @@
-**I.**
-
-Chinmay [wrote a while ago](https://reallifelaughtrack.wordpress.com/2022/06/05/capped-prices-and-the-cab-crisis/) about why it's difficult to get cabs in Bangalore using aggregator apps like Uber or Ola. He thinks that the problem started with the [Aggregator Guidelines](https://morth.nic.in/sites/default/files/notifications_document/Motor%20Vehicle%20Aggregators27112020150046.pdf) issued by the Central Government.[1](#footnote-1) The Guidelines impose price controls on aggregator apps and allow for dynamic/surge pricing only up to 1.5x or 0.5x of the base fare. This corrupts the market mechanism, puts cabs out of business, and makes things worse for customers.
-
-Chinmay offered a sweet solution: Huber should let customers offer "tips" *in advance* of the ride being accepted by a driver. This re-establishes a market and sidesteps the price control. Whether this will work depends on the definition of "fare" in the guidelines. If a tip is part of the fare, then Chinmay's solution would be illegal. If it isn't, he has successfully helped a corporation evade government regulation - this is the bread and butter of in-house legal advisors. Congratulations!
-
-Not being a law person, Chinmay showed me the draft and asked me whether his solution was legal. I answered, as all good law people do, with "it depends." And when he asked me what it depends on, I realised how many possible answers I could give him.
-
-But I tried, uncharacteristically, to be honest with him instead: 
-
-> **Chinmay**: Is a tip a fare?
->
-> **Nihal**: (in deep thought) ehhhhhhhhh 
->
-> **Chinmay**:  How can the answer be "ehhh." Surely, words have meaning, and legal provisions constrain various state actors, including the judges.
->
-> **Nihal**: Not necessarily. The meaning of the word depends on various factors, like who your lawyer is, who you are, what entrenched interests want the word to mean in this particular context, and what the judge had for breakfast that morning. As for this in particular, I'm not sure if the guidelines are even definitely mandatory yet. They are *sort* of mandatory. 
->
-> **Chinmay**:  "sort of mandatory"? Wait, what is law? Isn't there a big book called the law? 
->
-> **Nihal**: Okay, you've just given me an idea for an essay. See you in a few hours.
-
-This essay is for non-law people. But it is also for law students who are yet to come into contact with the law as it is practised.
-
-*Tldr; Santa isn't real, judges are people, the law is not a big book in the sky.  *
-
-**II.**
-
-Huber, a cab-aggregator company, has been persuaded by their immensely creative consultant, Chinmay, to adopt this approach. Huber's executives are jumping with joy, as is Chinmay. A market has been re-established, price controls have been beaten, the law has been foiled. Even if Huber does get sued, Chinmay theorises, the risks are manageable and the litigation can be carried out for a long time. Chinmay knows, for instance, that Indian judges are statistically less likely to impose very large punitive fines.
-
-The regulators might not notice for a while before the news articles pile up, and a public ruckus begins. Instead of enforcing the law as written, the licensing authority has some discretion as to whether to take Huber to task. Let's assume the regulator ignores the issue altogether. Chinmay sits around, smugly satisfied at having beaten the price control. 
-
-Chinmay does not, however, anticipate Murphy's law of disputes: if you have a public-facing service and *can* get sued, you *will* get sued. Even if the licensing authority does nothing, some association of consumers (who do not understand the unit economics of catching a cab) will complain that they have to tip people in advance, and claim that Huber is breaking the law. This *Association of Consumers*, a public-spirited organisation, will move the High Court of Karnataka using a public interest [writ petition](https://en.wikipedia.org/wiki/Writ#Indian_law). 
-
-Roughly, they will be arguing that the tip *is* part of the fare. And more importantly, they will be arguing that even if the tip isn't *technically* part of the fare, it has become so necessary to the process of actually getting a ride accepted that *it might as well be part of the fare*. Underhanded hypertechnical behavior such as this, the Association of Consumers will say, is an attempt to defeat the price control, and so will fail.
-
-For illustrative purposes, and to really show you what this kind of argument looks like, I called lawyers I know and argued Chinmay's somewhat dubious case with them. 
-
-> ***Nihal****:* Now, since we don't want to be too specific about Karnataka's laws, and because I currently cannot be bothered to find the relevant notification right now, let's assume that the Central Government Guidelines apply. 
->
-> ***Lawyer****:* You're being lazy, but alright. 
->
-> ***Nihal****:* I don't care, I have a [bet to win](https://twitter.com/joodaloop/status/1584299240268107776?s=20&t=b2IgZU64n4YYyWDORe2lDw). Now, is a 'tip' part of the fare?
->
-> **Lawyer**: Okay, read me the definition of 'fare'. 
->
-> **Nihal**: Under the Motor Vehicle Aggregator Guidelines, 'fare' means the 'total charges debited by the Aggregator to the Rider pursuant to the latter booking a ride through the Aggregator's App and completion of such ride.'
->
-> **Lawyer**: Let's break this down. So there are a couple of components here, if you're going to read this very clinically. You have to ask: (1) is it part of *total charges*; (2) is it debited by the Aggregator; (3) is it debited from the Rider?; (4) is it pursuant to *the Rider booking a ride through the Aggregator's app*; (5) is it pursuant to the *completion of the ride? *
->
-> **Nihal**: You're sparing me a lot of nuance and detail on the interpretation of texts and keeping this simple, right? I don't like being patronised. 
->
-> **Lawyer**: I thought you wanted people to read your newsletter. 
->
-> **Nihal:** Fair enough. So, we can agree that components (1-4) are met here, but I disagree about (5). It's not pursuant to the completion of the ride, but merely pursuant to the *acceptance* of the ride. Also, what if I agree on the app to pay the tip *before* the ride, in cash, to the driver? What if I agree to some arrangement that circumvents this altogether? 
->
-> **Lawyer:** Nihal, you don't need to steelman Chinmay's case for him, you know? You know fully well that in both these cases, the most likely outcomes are as follows: (1) the regulator/state-government will issue a circular clarifying that this is illegal; or (2) if it goes to court before the regulator decides to close your loophole, the judge will take a long look at your weird hypertechnical argument before deciding that you are clearly trying to defeat the intention of a legislation, which was to *not allow* price surges, implicitly or explicitly.
->
-> **Nihal**: Let me just try one more time. I'm *not* trying to defeat the price restriction. The aggregator company has no capacity to force me to pay more. They don't even have to make it *implicit* that it's functionally part of the fare. 
->
-> **Lawyer:** There's no need for this feature anyway if you're going to call up every cabbie and offer him money. What you are doing with this feature is implicitly *signalling* that this is a necessary part of getting a cab in some fashion, which signals that it's part of the fare. 
->
-> **Nihal:** Chinmay would probably say the judge needs to understand the unit economics of a cab business. 
->
-> **Lawyer:** Chinmay is going to take a short trip to judicial custody for being in contempt of court. On the other hand, Chinmay *might* also pull this off, given a good day, a sympathetic judge, and a weak petitioner.
->
-> **Chinmay:** Sooooooo, you're telling me there's a chance....
->
-> **Nihal and Lawyer (sighing):** *economists.* It's unlikely, but yeah, there's a chance. There's always a chance that the judge will find someone else's case stupider than yours. There's always a chance.
-
-**III. **
-
-You see, like Chinmay, I used to believe there was a book called the law. In fact, it would be extremely weird if you *didn't* think there was a big book called the law. Surely, there must be, if so many of our cultural assumptions about disputes work around it. "That's illegal," one might say, or "this is a violation of my right to privacy!" or "you can't do that!" These claims are just that, *claims*. Sometimes the correctness of those claims is clear, and at other times they are murky. 
-
-But why are they murky? Why does Chinmay have a chance? Why are there only ever odds? Why, after so long, do we not have certainty -- a clear system of rules and commandments in a big book called the law?
-
-Part of the reason is that words are slippery things and it takes time for human beings to come up with sentence structures that somewhat accurately model an expected reality, which can command action, which can act as *law* without resulting in fifteen rounds of litigation. Until then, we have judges who have some discretion to keep precocious and clever people from tricking everyone else.
-
-Matt Levine, as always, put it so well in *Money Stuff* [just yesterday](https://www.bloomberg.com/opinion/articles/2022-10-20/making-crypto-hacking-less-lucrative): 
-
-> . . . there are a lot of external constraints, constraints of laws and norms. If you find a flaw in a contract that says your counterparty has to pay you $50 million, she might say no. And you might go to court over it, and point to the language that says she has to pay you $50 million, and the judge might say "what, no, this is stupid, it can't have meant that, get out of here." The judge will refer to vague ideas --- equity, the intent of the parties, the covenant of good faith and fair dealing --- to reject your clever reading of the contract. And then you won't get your $50 million. There is some amount of cleverness that is too clever.
->
-> . . . 
->
-> At some very high level of generality, there are the explicit rules --- the words of the contract, the mechanisms of the stock exchange, etc. --- and then there is a background set of fairness norms. And if you find a way to make a ton of money with a too-clever reading of the explicit rules, the background fairness norms will kick into gear and you will get in trouble. Following the rules is good, but following the rules to absurd places is bad, perhaps a crime.
-
-Now, this is all very bad for Chinmay, because vague and abstract principles like "the covenant of good faith" have corresponding equivalents in the interpretation of statues. But *even those* are really a thickly-theorised veneer over "you are trying to be too smart by half, and the village elders disapprove of your precociousness." 
-
-**IV.**  
-
-I remember being a first-year law student and being assigned a weirdly straightforward tax case at an internship. The client had challenged an income tax assessment and the case was pending before the Supreme Court. In the meanwhile, the income tax department had opened a *new* assessment about what was basically the same alleged tax-code violation.
-
-I burnt the midnight oil, spent hours and hours poring over commentaries to try to find caselaw to the effect that you can't sue someone twice for the same assessed income on new grounds when it's basically under litigation. I was proud of the briefing note I drafted for the lawyer. Sadly, I couldn't make it to the hearing, but I still remember the conversation that took place when he came back from court. 
-
-> "So, how did it go?" 
->
-> "We won, got the assessment quashed"
->
-> "On what grounds? I couldn't find any caselaw really on this, and nothing the tax department did was like, prohibited by the text of the law."
->
-> "Grounds? Caselaw? We didn't get that far. I just explained that the tax department sued us twice for the same thing and *Judge [Name] thought that was stupid."*
-
-This little exchange caused me to have a *view quake* - a clear nine on the Richter scale. My entire conception of lawyering had been turned on its head. I understood, immediately, and embarrassingly late, that there are *practical* evaluations in litigation, and that *judges* really are *judges*. Their fundamental function is resolving disputes, not theorising about texts. Lawyers have a side of them that is strategic, and strategy is a lot of what it means to be a good lawyer. And like good lawyers, judges should look beyond textual gymnastics. Instead, wisdom, justice, practicality, and a steady disposition are a lot of what it means to be a good judge.
-
-As for Chinmay, which court he ends up in front of, what they think, and how they feel about cab aggregators and price controls is at least as important as the law in the statute book. 
-
-And anyway, who knows? He might get lucky and end up in front of a judge who has had trouble catching a cab in Bangalore.
-
-Thanks for reading! Subscribe to receive new posts and support my work.
-
-[1](#footnote-anchor-1)
-
-Let us, for a moment, not be nitpicky about the fact that Chinmay was talking about Bangalore, and that Karnataka's legislation, [*the Karnataka On-Demand Transportation Technology Aggregator Rules, 2016*](https://dpal.karnataka.gov.in/storage/pdf-files/Karnataka%20Rules/59%20of%201988%20Central%20Rules%20(E).pdf), predates the Central Government guidelines.
+<!-- Feel free to remove this div. Uses purplecoat: http://ellekasai.github.io/purplecoat.js -->
+<div data-purplecoat="shiori" data-purplecoat-label="footer.html">
+&copy;{{ site.time | date:"%Y" }}.
+Built with <a href="http://jekyllrb.com/">Jekyll</a> and
+<a href="https://github.com/ellekasai/shiori">Shiori Theme</a>.
+</div>
