--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,2 +1,2 @@
 <!-- Feel free to remove this div. Uses purplecoat: http://ellekasai.github.io/purplecoat.js -->
-<p class="text-muted">{{ page.date | date_to_string }}</p>
+<!-- <p class="text-muted">{{ page.date | date_to_string }}</p> -->
