--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,7 +1,10 @@
-<!-- Feel free to remove this div. Uses purplecoat: http://ellekasai.github.io/purplecoat.js -->
-<div data-purplecoat="shiori" data-purplecoat-label="post-footer.html">
-<h3 class="section-header">ABOUT THE AUTHOR</h3>
-<div class="well well-sm">
-  {% include ribbon.html %} You can customize this section in <code>_includes</code> &rarr; <code>post-footer.html</code>.
-</div>
+<h3 class="section-header">
+  ABOUT THE AUTHOR
+</h3>
+
+<div class="well">
+  <img src="/assets/images/nihal-sahu.jpeg" style="display: inline; vertical-align: top; height: 75px; width: 75px; margin-right: 25px; float: left" alt="Nihal Sahu photo" />
+  <span style="clear: left">
+    Nihal Sahu is a Research Associate, Health at the Vidhi Centre for Legal Policy. He works on legal and public policy issues involving health, pharmaceutical regulation, and technology. 
+  </span>
 </div>
