--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,3 @@
-<!-- Feel free to remove this div. Uses purplecoat: http://ellekasai.github.io/purplecoat.js -->
-<div data-purplecoat="shiori" data-purplecoat-label="footer.html">
-&copy;{{ site.time | date:"%Y" }}.
-Built with <a href="http://jekyllrb.com/">Jekyll</a> and
-<a href="https://github.com/ellekasai/shiori">Shiori Theme</a>.
-</div>
+&copy; Nihal Sahu {{ site.time | date:"%Y" }}
+<br><br>
+Shoutout to Elle Kasai for the <a href="https://github.com/ellekasai/shiori">Shiori Theme</a>.
