--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,10 @@
 <!-- Additions to <head> tags go here. -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-998G1SXGVX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-998G1SXGVX');
+</script>
