About Page and nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,1 +1,2 @@
 <li><a href="{{ "/archive" | prepend:site.baseurl }}">Archive</a></li>
+<li><a href="{{ "/about" | prepend:site.baseurl }}">About Me</a></li>
