--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,9 @@
   <h3 class="section-header">WHO AM I?</h3>
   <p>My name is Nihal Sahu (better known as @annihalated on the Internets.)</p>  
   <p>Twitter: <a href="https://twitter.com/annihalated">@annihalated</a></p>
+  <p>LinkedIn: <a href="https://linkedin.com/in/nihal-sahu">nihal-sahu</a></p>
+  
 
-  <h3 class="section-header">Court Notes</h3>
-  <p>I also write a <a href="https://nihalsahu.substack.com">weekly newsletter</a> on legal issues and life.</p>
+  <h3 class="section-header">READING LIST</h3>
+  <p>I also write a <a href="https://nihalsahu.substack.com">weekly newsletter</a> on what I'm reading.</p>
 
